copy text align fix

--- a/admin/resources/app.css
+++ b/admin/resources/app.css
@@ -313,8 +313,8 @@
 }
 
 .srizon .input-align {
-  height: 3rem;
-  line-height: 3rem;
+  height: 5rem;
+  line-height: 5rem;
 }
 
 .srizon {
