--- a/assets/admin/sass/_form.scss
+++ b/assets/admin/sass/_form.scss
@@ -1,6 +1,6 @@
 .srizon{
   .input-align{
-    height: 3rem;
-    line-height: 3rem;
+    height: 5rem;
+    line-height: 5rem;
   }
 }
